--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,8 +4,9 @@ disqus:
   disqus_shortname: 'http-lzakharov-github-io'
 
 menu:
-- {name: 'About', path: 'menu', url: 'about.html'}
 - {name: 'Posts', path: 'menu', url: 'posts.html'}
+- {name: 'Resume', path: 'menu', url: 'resume.html'}
+- {name: 'About', path: 'menu', url: 'about.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
